syntax = "proto3";

message DMCContractData {
  string order_id = 1;
  string miner_dmc_account = 2;
  optional bytes merkle_root = 3;
  optional uint32 chunk_size = 4;
}

message ContractInfo {
    uint32 contract_status = 1;
    uint64 latest_check_time = 2;
    repeated bytes meta_merkle = 3;
    optional uint64 stored_size = 4;
    optional uint64 sum_size = 5;
}

message MetaData {
  bytes contract = 1;
  bytes state_list = 2;
}
